started on batch script

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,8 @@
-SQLALCHEMY_DATABASE_URI="postgresql://postgres:yamaha12@localhost:5432/financetracker"
+ASYNC_SQLALCHEMY_DATABASE_URI="postgresql+asyncpg://postgres:yamaha12@localhost:5432/financetrackertest"
+SQLALCHEMY_DATABASE_URI="postgresql://postgres:yamaha12@localhost:5432/financetrackertest"
+
 # TEST_SQLALCHEMY_DATABASE_URI="sqlite:///:memory:"
-TEST_SQLALCHEMY_DATABASE_URI="postgresql://postgres:yamaha12@localhost:5432/financetracker"
+TEST_SQLALCHEMY_DATABASE_URI="postgresql://postgres:yamaha12@localhost:5432/financetrackertest"
 TEST_PLAID_URL="https://sandbox.plaid.com"
 TEST_PLAID_CLIENT_ID="66a5c9bf227b6d001a9e2a9b"
 PLAID_SECRET="47dd300b871f72ae878984be985b56"
