--- a/backend/Makefile
+++ b/backend/Makefile
@@ -8,5 +8,9 @@ test_models:
 	@echo "Testing models creation"
 	@python -m db.test_models
 
+# running stuff
+run_batch:
+	@uvicorn batch.batch:app --reload --log-level debug
+
 
 # TODO: look into uvicorn and how to use it
