finished sandbox basic api functionality and alembic db migration integration

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,9 +1,11 @@
 MODELS_TARGET = models.py
 
+# python environments
 download_dependencies: ./api/requirements.txt ./batch/requirements.txt ./db/requirements.txt
 	@cat ./api/requirements.txt ./batch/requirements.txt ./db/requirements.txt | sort | uniq | xargs pip uninstall -y
 	@cat ./api/requirements.txt ./batch/requirements.txt ./db/requirements.txt | sort | uniq | xargs pip install
 
+# testing
 test_models:
 	@echo "Testing models creation"
 	@python -m db.test_models
@@ -12,5 +14,14 @@ test_models:
 run_batch:
 	@uvicorn batch.batch:app --reload --log-level debug
 
+# database migration solution
+migrate_db: ./db/models.py
+	@alembic -c ./alembic/alembic.ini revision --autogenerate -m "$(shell date +'%Y%m%d_%H%M%S')"
+	@alembic -c ./alembic/alembic.ini upgrade head
 
-# TODO: look into uvicorn and how to use it
+clear_db_cache:
+	@echo "Clearing alembic version files..."
+	@rm -r ./alembic/versions
+	@mkdir ./alembic/versions
+	@python -m db.reset_alembic
+	@echo "Alembic version directory cleared and version table reset."
