--- a/frontend-sandbox/package.json
+++ b/frontend-sandbox/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "stream-browserify": "^3.0.0",
     "typescript": "^4.9.5",
     "util": "^0.12.5",
