shifting tests and dockerized everything

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,3 +1,6 @@
+include .env
+PG_PASSWORD = $(POSTGRES_PASSWORD)
+
 MODELS_TARGET = models.py
 
 # python environments
@@ -5,18 +8,19 @@ download_dependencies: ./api/requirements.txt ./db/requirements.txt
 	@cat ./api/requirements.txt ./db/requirements.txt | sort | uniq | xargs pip uninstall -y
 	@cat ./api/requirements.txt ./db/requirements.txt | sort | uniq | xargs pip install
 
-# testing
-test_models:
-	@echo "Testing models creation"
-	@python -m db.test_models
+
+# LOCAL TESTING:
 
 # running stuff
 run_api:
-	@uvicorn api.api:app --reload --log-level debug
+	@uvicorn api.api:api_app --reload --host $(API_HOST) --port $(API_PORT) --log-level debug
+
+run_test_api:
+	@uvicorn api.api:test_app --reload --host $(TEST_API_HOST) --port $(TEST_API_PORT)  --log-level debug
 
 # database migration solution
 migrate_db: ./db/models.py
-	@alembic -c ./alembic/alembic.ini revision --autogenerate -m "$(shell date +'%Y%m%d_%H%M%S')"
+	@alembic -c ./alembic/alembic.ini revision --autogenerate -m "revision"
 	@alembic -c ./alembic/alembic.ini upgrade head
 
 clear_db_cache:
@@ -30,5 +34,6 @@ clear_db_cache:
 clear_db:
 	@python -m db.init_db
 
-test_api:
-	@python -m pytest -v -s --log-cli-level=INFO
+# dockerfile specifics
+docker_up:
+	@docker-compose -f .\docker\docker-compose.yml --env-file ./.env up
