--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -10,7 +10,15 @@ jobs:
     environment: dev
 
     steps:
-      - name: Check AWS Account
+      - name: Setup Python Environment
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+      - name: Install Python Dependencies
+        run: |
+          cd backend
+          make download_dependencies
+      - name: Setup AWS Account
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
