--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -10,6 +10,8 @@ jobs:
     environment: dev
 
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
       - name: Setup Python Environment
         uses: actions/setup-python@v5
         with:
@@ -17,7 +19,7 @@ jobs:
       - name: Install Python Dependencies
         run: |
           pwd
-          ls -la ..
+          ls -la
           cd backend
           make download_dependencies
       - name: Setup AWS Account
