docker container issue fixed, but test_api_root is still buggy for google login entrypoint

--- a/backend/db/pg_config/postgresql.conf
+++ b/backend/db/pg_config/postgresql.conf
@@ -150,7 +150,7 @@ shared_buffers = 128MB			# min 128kB
 					#   sysv
 					#   windows
 					# (change requires restart)
-dynamic_shared_memory_type = windows	# the default is usually the first option
+dynamic_shared_memory_type = posix	# the default is usually the first option
 					# supported by the operating system:
 					#   posix
 					#   sysv
@@ -728,11 +728,11 @@ timezone = 'Europe/London'
 					# encoding
 
 # These settings are initialized by initdb, but they can be changed.
-lc_messages = 'English_United States.1252' # locale for system error message
+lc_messages = 'en_US.utf8' # locale for system error message
 					# strings
-lc_monetary = 'English_United States.1252' # locale for monetary formatting
-lc_numeric = 'English_United States.1252' # locale for number formatting
-lc_time = 'English_United States.1252'	# locale for time formatting
+lc_monetary = 'en_US.utf8' # locale for monetary formatting
+lc_numeric = 'en_US.utf8' # locale for number formatting
+lc_time = 'en_US.utf8'	# locale for time formatting
 
 #icu_validation_level = warning		# report ICU locale validation
 					# errors at the given level
