--- a/backend/Makefile
+++ b/backend/Makefile
@@ -49,9 +49,7 @@ docker_build_db:
 
 docker_run_db:
 	@docker run --name postgres-run \
-    --mount type=bind,source=db/pg_config/pg_hba.conf,dst=/var/lib/postgresql/data/pg_hba.conf \
-    --mount type=bind,source="/db/pg_config/postgresql.conf,dst=/var/lib/postgresql/data/postgresql.conf \
     -e POSTGRES_DB=postgres \
     -e POSTGRES_USER=postgres \
     -e POSTGRES_PASSWORD=postgres \
-    -p 5433:5432 test_db 
+	test_db
