--- a/backend/docker/dev/Dockerfile.pg
+++ b/backend/docker/dev/Dockerfile.pg
@@ -1,8 +1,10 @@
 # working directory: ./financetracker/backend
-FROM postgres:16.0
+FROM postgres:latest
 
 # override the configuration file for max connections, etc.
 COPY ./db/pg_config/postgresql.conf /etc/postgresql.conf
 COPY ./db/pg_config/pg_hba.conf /etc/pg_hba.conf
 
 EXPOSE 5432
+
+CMD ["postgres", "-c", "config_file=/etc/postgresql.conf", "-c", "hba_file=/etc/pg_hba.conf"]
